fixed nav bar overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -89,7 +89,8 @@ header {
             width: 0px;
             min-height: 100vh;
             transition: width 0.5s;
-            background-color: gray;
+            background-color: rgba(lighten($tertiary-color, 20%), 1);
+            overflow-x: hidden;
             ul {
                 flex-wrap: wrap;
                 flex-direction: column;
